@@ -8,6 +8,8 @@
 - The syntax for chat room commands has been changed. See below.
 - The "whenStatusInactive" names for ASPD potions have been changed to
   "Concentration Potion", "Awakening Potion" and "Berserk Potion".
+- dcOnDisconnect must be set to 2 if you want to disconnect when
+  you get "Out of sync with server" error.
 
 Bug fixes:
 - Fix deal bug: showing twice as many items added.
